--- a/base/templates/motd.erb
+++ b/base/templates/motd.erb
@@ -1,12 +1,12 @@
-****** THIS IS AN ExxonMobil PUPPET MANAGED SERVER *************      
-  ___                   __  __     _    _ _ 
- | __|_ ____ _____ _ _ |  \/  |___| |__(_) |
- | _|\ \ /\ \ / _ \ ' \| |\/| / _ \ '_ \ | |_
- |___/_\_\/_\_\___/_||_|_| _|_\___/_.__/_|_| |_       
-              | '_ \| | | | '_ \| '_ \ / _ \ __|
-              | |_) | |_| | |_) | |_) |  __/ |_ 
-              | .__/ \__,_| .__/| .__/ \___|\__|
-              |_|         |_|   |_| 
+****** THIS IS AN ExxonMobil Puppet MANAGED SERVER *************      
+        ___                   __  __     _    _ _ 
+       | __|_ ____ _____ _ _ |  \/  |___| |__(_) |
+       | _|\ \ /\ \ / _ \ ' \| |\/| / _ \ '_ \ | |_
+       |___/_\_\/_\_\___/_||_|_| _|_\___/_.__/_|_| |_       
+                     | '_ \| | | | '_ \| '_ \ / _ \ __|
+                     | |_) | |_| | |_) | |_) |  __/ |_ 
+                     | .__/ \__,_| .__/| .__/ \___|\__|
+                     |_|         |_|   |_| 
 
 ************  DO NOT  MAKE OS CHANGES MANUALLY *****************
 ---------NODE INFORMATION-------------
