--- a/base/templates/motd.erb
+++ b/base/templates/motd.erb
@@ -1,4 +1,4 @@
-****** THIS IS AN ExxonMobil Puppet MANAGED SERVER *************      
+****** THIS IS AN EXXONMOBIL PUPPET MANAGED SERVER ************     
         ___                   __  __     _    _ _ 
        | __|_ ____ _____ _ _ |  \/  |___| |__(_) |
        | _|\ \ /\ \ / _ \ ' \| |\/| / _ \ '_ \ | |_
