--- a/base/templates/motd.erb
+++ b/base/templates/motd.erb
@@ -1,14 +1,12 @@
-****** THIS IS AN EXXONMOBIL PUPPET MANAGED SERVER ************     
-        ___                   __  __     _    _ _ 
-       | __|_ ____ _____ _ _ |  \/  |___| |__(_) |
-       | _|\ \ /\ \ / _ \ ' \| |\/| / _ \ '_ \ | |_
-       |___/_\_\/_\_\___/_||_|_| _|_\___/_.__/_|_| |_       
-                     | '_ \| | | | '_ \| '_ \ / _ \ _|
-                     | |_) | |_| | |_) | |_) |  __/ |_ 
-                     | .__/ \__,_| .__/| .__/ \___|\__|
-                     |_|         |_|   |_| 
-
-************  DO NOT  MAKE OS CHANGES MANUALLY *****************
+************* THIS IS A PUPPET MANAGED SERVER ******************
+                                             _
+                _ __  _   _ _ __  _ __   ___| |_ 
+               | '_ \| | | | '_ \| '_ \ / _ \ __|
+               | |_) | |_| | |_) | |_) |  __/ |_ 
+               | .__/ \__,_| .__/| .__/ \___|\__|
+               |_|         |_|   |_| 
+               
+************  DO NOT MAKE OS CHANGES MANUALLY *****************
 ---------NODE INFORMATION-------------
 Hostname:   <%= @fqdn %>
 OS:         <%= @os['name'] %> <%= @os['release']['full'] %>
